# gitlab-hammer

./: Pipfile  README.md  setup.cfg
src/gitlabhammer/: __main__.py
