[metadata]
name = gitlab-hammer
version = attr: gitlabhammer.VERSION
url = https://github.com/ephemient/gitlab-hammer
author = Daniel Lin
author_email = ephemient@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache License, Version 2.0
license_file = LICENSE
description = Apply Git Hammer to all public repositories on a GitLab instance
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
zip_safe = True
python_requires = >=3.7
packages=find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where=src
